--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,25 @@
 /* You can add global styles to this file, and also import other style files */
+
+/*@import '~bootstrap/dist/css/bootstrap.min.css';*/
+@import "assets/css/main.css";
+/*@import "assets/css/aos.css";*/
+
+@import url('https://fonts.googleapis.com/css2?family=Allerta+Stencil&display=swap');
+
+
+/* You can add global styles to this file, and also import other style files */
+div,p,h1,h2,h3,h4,h5,h6,li,span{
+    font-family: 'Poppins', sans-serif !important;
+}
+.ngx-pagination {
+    margin: 0 auto;
+    text-align: center;
+}
+
+.ngx-pagination li {
+    display: inline-block;
+    font-size: 19px;
+    font-weight: bold;
+}
+
+
