MAJ Partie portfolio

--- a/src/app/portfolio/header/header.component.html
+++ b/src/app/portfolio/header/header.component.html
@@ -16,7 +16,7 @@
           aria-labelledby="offcanvasNavbarLabel">
             <div class="offcanvas-header">
               <h5 class="offcanvas-title"
-              id="offcanvasNavbarLabel">Valérie TIberghien</h5>
+              id="offcanvasNavbarLabel">Valérie Tiberghien</h5>
               <button type="button" class="btn-close
               text-reset" data-bs-dismiss="offcanvas"
               aria-label="Close"></button>
@@ -29,19 +29,19 @@
                     href="#about">A propos de...</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link smooth-scroll" href="#competence">Compétences professionnelles</a>
+                  <a class="nav-link smooth-scroll" href="#skillpro">Compétences professionnelles</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link smooth-scroll" href="#experience">Expériences professionnelles</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link smooth-scroll" href="#projects">Projets</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link smooth-scroll" href="#skill">Skills</a>
+                  <a class="nav-link smooth-scroll" href="#skill">Compétences informatiques</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link smooth-scroll" href="#education">Formations</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link smooth-scroll" href="#projects">Projets</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link smooth-scroll" href="#reference">Reference</a>
