--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -2,8 +2,9 @@
 <div class ="page-content">
     <app-intro></app-intro>
     <app-about></app-about>
+    <app-skillspro></app-skillspro>
     <app-experience></app-experience>
-
+    <app-skills></app-skills>
     <app-education></app-education>
 </div>
 <app-footer></app-footer>
