--- a/src/app/portfolio/about/about.component.html
+++ b/src/app/portfolio/about/about.component.html
@@ -48,7 +48,7 @@
                 <div class="col-sm-1">
                   <strong class="text-uppercase"><i class="fas fa-language fa-2x"></i></strong>
                 </div>
-                <div class="col-sm-11 m-auto">Français, anglais technique</div>
+                <div class="col-sm-11 m-auto">Anglais technique</div>
               </div>
               <div class="row mt-3">
                 <div class="col-sm-1">
@@ -56,6 +56,15 @@
                   </strong>
                 </div>
                 <div class="col-sm-11 m-auto">Permis B, voiture</div>
+              </div>
+              <div class="row mt-3">
+                <div class="col-sm-1">
+                  <strong class="text-uppercase"><i class="far fa-heart fa-2x"></i>
+                  </strong>
+                </div>
+                <div class="col-sm-11 m-auto">Aquagym 1 fois par semaine en club depuis 8 ans.
+                  <br/>Jeux de société en famille (Cluedo)
+                  <br/>Recherche généalogique familiale depuis 20 ans</div>
               </div>
             </div>
           </div>
