maj partie intro

--- a/src/app/portfolio/intro/intro.component.html
+++ b/src/app/portfolio/intro/intro.component.html
@@ -11,7 +11,7 @@
                         </a>
                     </div>
                     <div class="h2 title">Valérie TIBERGHIEN</div>
-                    <p class="category text-white">Dévelopeur FullStack Angular / Symfony</p>
+                    <p class="category text-white">Développeuse FullStack Angular / Symfony</p>
                     <a class="btn btn-primary smooth-scroll mr-2" href="mailto:tiberghien.valerie@gmail.com" data-aos="" data-aos-anchor="data-aos-anchor">Contactez Moi</a>
                     <a class="btn btn-primary" href={{cvUrl}} target="_blank" data-aos="" data-aos-anchor="data-aos-anchor">Télécharger CV</a>
                 </div>
