--- a/src/app/portfolio/header/header.component.html
+++ b/src/app/portfolio/header/header.component.html
@@ -5,7 +5,7 @@
       <nav class="navbar navbar-light fixed-top navbar-transparent bg-primary" color-on-scroll="400">
         <div class="container-fluid"> 
           <a class="navbar-brand fs-3" href="#"></a>
-          <button class="navbar-toggler" type="button"
+          <button class="navbar-toggler custom-toggler" type="button"
           data-bs-toggle="offcanvas"
           data-bs-target="#offcanvasNavbar"
           aria-controls="offcanvasNavbar">
@@ -29,13 +29,16 @@
                     href="#about">A propos de...</a>
                 </li>
                 <li class="nav-item">
+                  <a class="nav-link smooth-scroll" href="#project">Projets</a>
+                </li>
+                <li class="nav-item">
                   <a class="nav-link smooth-scroll" href="#skillpro">Compétences professionnelles</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link smooth-scroll" href="#experience">Expériences professionnelles</a>
+                  <a class="nav-link smooth-scroll" href="#skill">Compétences informatiques</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link smooth-scroll" href="#skill">Compétences informatiques</a>
+                  <a class="nav-link smooth-scroll" href="#experience">Expériences professionnelles</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link smooth-scroll" href="#education">Formations</a>
