--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -2,9 +2,10 @@
 <div class ="page-content">
     <app-intro></app-intro>
     <app-about></app-about>
+    <app-projects></app-projects>
     <app-skillspro></app-skillspro>
-    <app-experience></app-experience>
     <app-skills></app-skills>
+    <app-experience></app-experience>
     <app-education></app-education>
    
 </div>
