changement partie projet

--- a/src/app/portfolio/projects/projects.component.html
+++ b/src/app/portfolio/projects/projects.component.html
@@ -11,9 +11,8 @@
                             <div class="card-body">
                                 <h4 class="card-title">{{project.title}}</h4>
                                 <h5 class="card-text"><b>Technology :</b> {{project.tech}} </h5>
-                                <a href={{project.livedemo}} class="btn btn-primary stretched-link ml-2 mr-5">Démo en ligne</a>
-                                <a href={{project.githurl}} class="btn btn-primary stretched-link">Lien Github</a>
-
+                                <a href={{project.githurl}} class="btn btn-primary">Lien Github</a>
+                                <a href={{project.livedemo}} class="btn btn-primary ml-2 mr-5">Démo en ligne</a>
                             </div>
                         </div>
                     </div>
